# StrideEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
src/: Application.cpp  CMakeLists.txt  main.cpp
src/VRI/: CMakeLists.txt
src/VRI/include/VRI/: BindlessResources.h  VRI.h  VRIAllocator.h  VRICommands.h  VRIResources.h  VRISwapchain.h  VRIUtils.h
src/VRI/src/VRI/: BindlessResouces.cpp  VRI.cpp  VRIAllocator.cpp  VRICommands.cpp  VRIResources.cpp  VRISwapchain.cpp
src/basic/: CMakeLists.txt
src/basic/include/: Profiling.h
src/basic/include/basic/: Profiling.h
src/basic/include/basic/containers/: Array.h  (+17 more)
src/basic/include/control/: ClassManager.h  ModuleManager.h  ResourceManager.h
src/basic/include/core/: Archive.h  Class.h  Common.h  Factory.h  Hashing.h  Object.h  Paths.h  Registry.h  Singleton.h  Threading.h
src/basic/src/: Profiling.cpp
src/basic/src/basic/: Profiling.cpp
src/basic/src/control/: ClassManager.cpp  ModuleManager.cpp  ResourceManager.cpp
src/basic/src/core/: Factory.cpp  Object.cpp  Registry.cpp  Singleton.cpp  Threading.cpp
src/control/: CMakeLists.txt
src/control/include/: ModuleManager.h  Modules.h
src/control/src/: ModuleManager.cpp
src/core/: CMakeLists.txt
src/core/include/: Archive.h  BasicTypes.h  Common.h  DeletionQueue.h  Hashing.h  Paths.h  ResourceManager.h  SectionManager.h  Threading.h
src/core/src/: Archive.cpp  SectionManager.cpp
src/editor/: CMakeLists.txt
src/editor/include/: EditorRenderer.h
src/editor/include/assetBrowser/: AssetBrowser.h
src/editor/include/editor/: EditorRenderer.h
src/editor/src/: EditorRenderer.cpp
src/editor/src/assetBrowser/: AssetBrowser.cpp
src/editor/src/editor/: EditorRenderer.cpp
src/engine/: CMakeLists.txt  Camera.cpp  Engine.cpp  EngineLoader.cpp  EngineSettings.cpp  Input.cpp  Material.cpp  MeshLoader.cpp  SceneObject.cpp  Viewport.cpp
src/engine/include/: Camera.h  Engine.h  EngineLoader.h  EngineSettings.h  EngineTime.h  EngineUI.h  Input.h  Material.h  MeshLoader.h  Scene.h  SceneObject.h  Sprite.h  StaticMesh.h  Viewport.h  Widget.h
src/engine/include/engine/: Engine.h  EngineSettings.h  EngineTime.h  Input.h  Viewport.h
src/engine/src/: Camera.cpp  Engine.cpp  EngineSettings.cpp  EngineTime.cpp  Input.cpp  Viewport.cpp
src/engine/src/engine/: Engine.cpp  EngineSettings.cpp  Input.cpp  Viewport.cpp
src/gui/: Widget.cpp
src/gui/include/: Widget.h
src/imgui/: CMakeLists.txt
src/imgui/include/: imconfig.h
src/imgui/include/imgui/: imconfig.h
src/rendercore/: CMakeLists.txt
src/rendercore/include/: BindlessResources.h  Instancer.h  Material.h  Pass.h  Renderer.h  StaticMesh.h  VulkanResourceManager.h  VulkanResources.h  VulkanUtils.h
src/rendercore/include/rendercore/: BindlessResources.h  BufferedResourceManager.h  EngineLoader.h  Font.h  Instancer.h  Material.h  Pass.h  RenderStack.h  RenderThread.h  Renderer.h  StaticMesh.h  VulkanDevice.h  VulkanInstance.h  VulkanResources.h  VulkanUtils.h
src/rendercore/src/: Instancer.cpp  Pass.cpp  Renderer.cpp  VulkanAllocator.cpp  VulkanResourceManager.cpp  VulkanResources.cpp  VulkanUtils.cpp
src/rendercore/src/rendercore/: BindlessResouces.cpp  EngineLoader.cpp  Font.cpp  Instancer.cpp  Pass.cpp  Renderer.cpp  VulkanDevice.cpp  VulkanInstance.cpp  VulkanResources.cpp  VulkanUtils.cpp
src/renderer/: BaseRenderer.cpp  CMakeLists.txt  DescriptorManager.cpp  EngineBuffers.cpp  EngineTextures.cpp  GpuScene.cpp  GraphicsRenderer.cpp  MeshPass.cpp  PipelineBuilder.cpp  ResourceAllocator.cpp  ResourceDeallocator.cpp  ResourceManager.cpp  ShaderCompiler.cpp  Swapchain.cpp  TestRenderer.cpp  VulkanRenderer.cpp  VulkanResourceManager.cpp
src/renderer/core/include/: EngineLoader.h  StaticMesh.h  TestRenderer.h  VulkanRenderer.h  VulkanResourceManager.h
src/renderer/core/src/: EngineLoader.cpp  EngineTextures.cpp  EngineUI.cpp  Material.cpp  Swapchain.cpp  TestRenderer.cpp  VulkanDevice.cpp  VulkanRenderer.cpp  VulkanResourceManager.cpp  VulkanUtils.cpp
src/renderer/include/: BaseRenderer.h  DescriptorManager.h  EngineBuffers.h  EngineTextures.h  GpuScene.h  GraphicsRenderer.h  MeshPass.h  PipelineBuilder.h  ResourceAllocator.h  ResourceManager.h  SceneViewport.h  ShaderCompiler.h  Swapchain.h  TestRenderer.h  VulkanDevice.h  VulkanRenderer.h  VulkanResourceManager.h  VulkanUtils.h
src/renderer/include/passes/: EngineUIPass.h  MeshPass.h  Pass.h  SpritePass.h
src/renderer/include/renderer/: EngineLoader.h  EngineTextures.h  EngineUI.h  Material.h  Swapchain.h  TestRenderer.h  VulkanDevice.h  VulkanInstance.h  VulkanRenderer.h  VulkanResourceManager.h  VulkanUtils.h
src/renderer/passes/: EngineUIPass.cpp  MeshPass.cpp  Pass.cpp  SpritePass.cpp
src/renderer/passes/include/: EngineUIPass.h  MeshPass.h  Pass.h  SpritePass.h
src/renderer/passes/src/: EngineUIPass.cpp  MeshPass.cpp  Pass.cpp  SpritePass.cpp
src/renderer/src/passes/: EngineUIPass.cpp  MeshPass.cpp  Pass.cpp  SpritePass.cpp
src/renderer/src/renderer/: EngineLoader.cpp  EngineTextures.cpp  EngineUI.cpp  Material.cpp  Swapchain.cpp  TestRenderer.cpp  VulkanDevice.cpp  VulkanInstance.cpp  VulkanRenderer.cpp  VulkanResourceManager.cpp  VulkanUtils.cpp
src/renderer/vulkan/: ResourceDeallocator.cpp  ShaderCompiler.cpp  Swapchain.cpp  VulkanDevice.cpp  VulkanRenderer.cpp  VulkanUtils.cpp
src/renderer/vulkan/include/: ResourceDeallocator.h  ShaderCompiler.h  Swapchain.h  VulkanDevice.h  VulkanInstance.h  VulkanRenderer.h  VulkanUtils.h
src/scene/: CMakeLists.txt
src/scene/include/: Camera.h  SceneObject.h  Sprite.h  Widget.h
src/scene/include/base/: RenderableObject.h  Scene.h  SceneObject.h
src/scene/include/viewport/: Sprite.h  Widget.h
src/scene/include/world/: Camera.h  StaticMeshObject.h
src/scene/src/: Camera.cpp  Scene.cpp  SceneObject.cpp
src/scene/src/base/: Scene.cpp  SceneObject.cpp
src/scene/src/viewport/: Widget.cpp
src/scene/src/world/: Camera.cpp
src/vulkan/: VulkanDevice.cpp  VulkanRenderer.cpp
src/vulkan/include/: Swapchain.h  VulkanDevice.h  VulkanRenderer.h  VulkanUtils.h
(+87 files in other folders)
